objects/ASI_GiftBox_Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_GiftBox_Order_Id__c</fullName>
        <label>Gift Box Order</label>
        <referenceTo>ASI_GiftBox_Order_Header__c</referenceTo>
        <relationshipLabel>Gift Box Order Items</relationshipLabel>
        <relationshipName>Gift_Box_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Order_Item_Amt__c</fullName>
        <formula>ASI_GiftBox_Order_Item_Unit_Cost__c  *  ASI_GiftBox_Order_Item_Order_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Order_Item_Brand__c</fullName>
        <formula>ASI_GiftBox_Order_Item_Id__r.ASI_GiftBox_Item_Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Order_Item_Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Order_Item_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Gift Box</label>
        <referenceTo>ASI_GiftBox_Inventory_Master__c</referenceTo>
        <relationshipLabel>Gift Box Order Items</relationshipLabel>
        <relationshipName>Gift_Box_Order_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Order_Item_Order_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Order_Item_Received_Quantity__c</fullName>
        <label>Received Quantity</label>
        <summarizedField>ASI_GiftBox_Good_Receipt__c.ASI_GiftBox_Receipt_Quantity__c</summarizedField>
        <summaryForeignKey>ASI_GiftBox_Good_Receipt__c.ASI_GiftBox_Order_Item_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Order_Item_Unit_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Gift Box Order Item</label>
    <nameField>
        <label>Order Item Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gift Box Order Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_GiftBox_VN_Order_Item</fullName>
        <active>true</active>
        <label>ASI GiftBox VN Order Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>